--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
  <groupId>org.iish.slideshow</groupId>
  <artifactId>slideshow</artifactId>
- <version>1.0-SNAPSHOT</version>
+ <version>1.0.0</version>
 
  <packaging>war</packaging>
 
