Move from Spring Boot to Javalin and upgrade to Java 17

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,11 +1,5 @@
-api:
-  url: http://api.socialhistoryservices.org/solr/all/srw
-
-sor:
-  accessToken: [an access token]
-
-slideshow:
-  timeout: 30
+timeout: 30
+api: https://api.socialhistoryservices.org/solr/all/srw
 
 blacklist:
   barcodes:
