--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-  </properties>
+</properties>
+
+  <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
